--- a/app/src/main/res/layout/activity_acc_register.xml
+++ b/app/src/main/res/layout/activity_acc_register.xml
@@ -2,11 +2,11 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF305"
-    android:orientation="vertical"
-    android:id="@+id/drawerLayout">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                     android:fontFamily="casual"
                     android:text="@string/register"
                     android:textAlignment="center"
-                    android:textColor="#4b2000"
+                    android:textColor="#000000"
                     android:textSize="36sp"
                     android:textStyle="bold" />
 
@@ -43,7 +43,7 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="casual"
                     android:text="@string/regtvFirstName"
-                    android:textColor="#4b2000"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -59,8 +59,8 @@
                     android:fontFamily="casual"
                     android:hint="@string/regfirstname"
                     android:inputType="textPersonName"
-                    android:textColor="#4b2000"
-                    android:textColorHint="#4b2000" />
+                    android:textColor="#000000"
+                    android:textColorHint="#000000" />
 
                 <TextView
                     android:layout_width="match_parent"
@@ -70,7 +70,7 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="casual"
                     android:text="@string/regtvLastName"
-                    android:textColor="#4b2000"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -89,6 +89,35 @@
                     android:textColor="#4b2000"
                     android:textColorHint="#4b2000" />
 
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="casual"
+                    android:text="@string/regtvUserName"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+                <EditText
+                    android:id="@+id/regEtUserName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:drawableLeft="@mipmap/ic_launcher_name"
+                    android:ems="10"
+                    android:fontFamily="casual"
+                    android:hint="@string/regetUserName"
+                    android:inputType="textPersonName"
+                    android:textColor="#4b2000"
+                    android:textColorHint="#4b2000" />
+
+
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -97,7 +126,7 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="casual"
                     android:text="@string/regtvTitleEmail"
-                    android:textColor="#4b2000"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
@@ -108,11 +137,11 @@
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
+                    android:drawableLeft="@mipmap/ic_launcher_email"
                     android:ems="10"
                     android:fontFamily="casual"
                     android:hint="@string/refemail"
                     android:inputType="textNoSuggestions"
-                    android:drawableLeft="@mipmap/ic_launcher_email"
                     android:textColor="#4b2000"
                     android:textColorHint="#4b2000" />
 
@@ -124,25 +153,55 @@
                     android:layout_marginTop="10dp"
                     android:fontFamily="casual"
                     android:text="@string/regtvTitlePassword"
-                    android:textColor="#4b2000"
+                    android:textColor="#000000"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     tools:text="@string/regtvTitlePassword" />
 
                 <EditText
-                    android:id="@+id/regEtPwd"
+                    android:id="@+id/regEtPwd1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:layout_marginRight="20dp"
                     android:layout_marginTop="10dp"
+                    android:drawableLeft="@mipmap/ic_launcher_password"
                     android:ems="10"
                     android:fontFamily="casual"
                     android:hint="@string/regpwd"
-                    android:drawableLeft="@mipmap/ic_launcher_password"
                     android:inputType="textNoSuggestions"
                     android:textColor="#4b2000"
                     android:textColorHint="#4b2000" />
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:fontFamily="casual"
+                    android:text="@string/regtvTitleConfirmPassword"
+                    android:textColor="#000000"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    tools:text="@string/regtvTitleConfirmPassword" />
+
+                <EditText
+                    android:id="@+id/regEtPwd2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    android:layout_marginTop="10dp"
+                    android:drawableLeft="@mipmap/ic_launcher_password"
+                    android:ems="10"
+                    android:fontFamily="casual"
+                    android:hint="@string/regtvTitleConfirmPassword"
+                    android:inputType="textNoSuggestions"
+                    android:textColor="#4b2000"
+                    android:textColorHint="#4b2000" />
+
 
                 <Button
                     android:id="@+id/btnRegister"
@@ -166,15 +225,15 @@
         </ScrollView>
 
 
-
     </LinearLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="#F89A06"
-        app:menu="@menu/navigation_menu"
-        android:layout_gravity="start">
+        app:menu="@menu/navigation_menu">
 
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
