--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -2,11 +2,11 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF305"
-    android:orientation="vertical"
-    android:id="@+id/drawerLayout">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -45,10 +45,10 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
+            android:drawableLeft="@mipmap/ic_launcher_email"
             android:ems="10"
             android:fontFamily="casual"
             android:hint="@string/refemail"
-            android:drawableLeft="@mipmap/ic_launcher_email"
             android:inputType="textNoSuggestions"
             android:textColor="#4b2000"
             android:textColorHint="#4b2000" />
@@ -73,10 +73,10 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
+            android:drawableLeft="@mipmap/ic_launcher_password"
             android:ems="10"
             android:fontFamily="casual"
             android:hint="@string/regpwd"
-            android:drawableLeft="@mipmap/ic_launcher_password"
             android:inputType="textNoSuggestions"
             android:textColor="#4b2000"
             android:textColorHint="#4b2000" />
@@ -100,13 +100,14 @@
             android:textStyle="bold" />
 
     </LinearLayout>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="#F89A06"
-        app:menu="@menu/navigation_menu"
-        android:layout_gravity="start">
+        app:menu="@menu/navigation_menu">
 
     </android.support.design.widget.NavigationView>
 </android.support.v4.widget.DrawerLayout>
