--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -21,7 +21,7 @@
             android:fontFamily="casual"
             android:text="@string/login"
             android:textAlignment="center"
-            android:textColor="#4b2000"
+            android:textColor="#000000"
             android:textSize="36sp"
             android:textStyle="bold" />
 
@@ -32,8 +32,8 @@
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
             android:fontFamily="casual"
-            android:text="@string/regtvTitleEmail"
-            android:textColor="#4b2000"
+            android:text="@string/regetUserName"
+            android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold" />
 
@@ -44,12 +44,12 @@
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@mipmap/ic_launcher_email"
+            android:drawableLeft="@mipmap/ic_launcher_name"
             android:ems="10"
             android:fontFamily="casual"
-            android:hint="@string/refemail"
+            android:hint="@string/regetUserName"
             android:inputType="textNoSuggestions"
-            android:textColor="#4b2000"
+            android:textColor="#000000"
             android:textColorHint="#4b2000" />
 
         <TextView
@@ -60,7 +60,7 @@
             android:layout_marginTop="10dp"
             android:fontFamily="casual"
             android:text="@string/regtvTitlePassword"
-            android:textColor="#4b2000"
+            android:textColor="#000000"
             android:textSize="18sp"
             android:textStyle="bold"
             tools:text="@string/regtvTitlePassword" />
@@ -77,8 +77,18 @@
             android:fontFamily="casual"
             android:hint="@string/regpwd"
             android:inputType="textNoSuggestions"
-            android:textColor="#4b2000"
+            android:textColor="#000000"
             android:textColorHint="#4b2000" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="Forget Password"
+            android:textColor="#f89a06"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/logLogin"
