--- a/app/src/main/res/layout/activity_acc_register.xml
+++ b/app/src/main/res/layout/activity_acc_register.xml
@@ -168,7 +168,7 @@
                     android:ems="10"
                     android:fontFamily="casual"
                     android:hint="@string/regpwd"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textNoSuggestions|textPassword"
                     android:textColor="#4b2000"
                     android:textColorHint="#4b2000" />
 
@@ -197,7 +197,7 @@
                     android:ems="10"
                     android:fontFamily="casual"
                     android:hint="@string/regtvTitleConfirmPassword"
-                    android:inputType="textNoSuggestions"
+                    android:inputType="textNoSuggestions|textPassword"
                     android:textColor="#4b2000"
                     android:textColorHint="#4b2000" />
 
