--- a/app/src/main/res/layout/activity_forget_password_page.xml
+++ b/app/src/main/res/layout/activity_forget_password_page.xml
@@ -38,13 +38,13 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/editTextLogInEmail"
+            android:id="@+id/editTextCPEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginTop="10dp"
-            android:drawableLeft="@mipmap/ic_launcher_name"
+            android:drawableLeft="@mipmap/ic_launcher_email"
             android:ems="10"
             android:fontFamily="casual"
             android:hint="@string/refemail"
@@ -53,7 +53,7 @@
             android:textColorHint="#4b2000" />
 
         <Button
-            android:id="@+id/logLogin"
+            android:id="@+id/changepwd"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="20dp"
@@ -65,7 +65,7 @@
             android:shadowDx="0"
             android:shadowDy="0"
             android:shadowRadius="5"
-            android:text="Forget Password"
+            android:text="Change Password"
             android:textColor="#000000"
             android:textSize="25sp"
             android:textStyle="bold" />
