--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -76,12 +76,12 @@
             android:ems="10"
             android:fontFamily="casual"
             android:hint="@string/regpwd"
-            android:inputType="textNoSuggestions"
+            android:inputType="textNoSuggestions|textPassword"
             android:textColor="#000000"
             android:textColorHint="#4b2000" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewForgetPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
