--- a/app/src/main/res/layout/activity_forget_password_verify_page.xml
+++ b/app/src/main/res/layout/activity_forget_password_verify_page.xml
@@ -57,7 +57,7 @@
                 android:textColorHint="#4b2000" />
 
             <Button
-                android:id="@+id/logLogin"
+                android:id="@+id/verifybtn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="20dp"
@@ -107,7 +107,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextCode"
+                android:id="@+id/editTextChangpw1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -134,7 +134,7 @@
                 android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/editTextCode"
+                android:id="@+id/editTextChangpw2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -149,7 +149,7 @@
                 android:textColorHint="#4b2000" />
 
             <Button
-                android:id="@+id/logLogin"
+                android:id="@+id/changepwdbtn"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:layout_marginLeft="20dp"
