--- a/app/src/main/res/layout/categor_view.xml
+++ b/app/src/main/res/layout/categor_view.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/imageViewCategory"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="250dp"
         android:adjustViewBounds="true"
         android:maxWidth="1000dp"
         app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -16,9 +16,10 @@
     <TextView
         android:id="@+id/textViewCategory"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="60dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textSize="25dp" />
+        android:textColor="#ffffff "
+        android:textSize="45dp" />
 
 </android.widget.LinearLayout>
