--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,11 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#FFF305"
-    android:id="@+id/drawerLayout">
-
+    android:background="#f89a06"
+    android:orientation="vertical">
 
 
     <!--other tv or et etc..-->
@@ -21,16 +20,17 @@
         <ListView
             android:id="@+id/listViewCategory"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:background="#000000" />
     </LinearLayout>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/navView"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_gravity="start"
         android:background="#F89A06"
-        app:menu="@menu/navigation_menu"
-        android:layout_gravity="start">
+        app:menu="@menu/navigation_menu">
 
     </android.support.design.widget.NavigationView>
 
