--- a/app/src/main/res/layout/activity_acc__contact_page.xml
+++ b/app/src/main/res/layout/activity_acc__contact_page.xml
@@ -142,7 +142,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:background="#F89A06"
-        app:menu="@menu/navigation_menu"
+        app:menu="@menu/navigation_loginmenu"
         android:layout_gravity="start">
 
     </android.support.design.widget.NavigationView>
