--- a/app/src/main/res/layout/activity_acc__profile_page.xml
+++ b/app/src/main/res/layout/activity_acc__profile_page.xml
@@ -35,6 +35,7 @@
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tvfn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -62,6 +63,7 @@
                     android:textColorHint="#000000" />
 
                 <TextView
+                    android:id="@+id/tvln"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -90,6 +92,7 @@
 
 
                 <TextView
+                    android:id="@+id/tvun"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -118,6 +121,7 @@
 
 
                 <TextView
+                    android:id="@+id/tvemail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -145,6 +149,7 @@
                     android:textColorHint="#4b2000" />
 
                 <TextView
+                    android:id="@+id/tvpw1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -174,6 +179,7 @@
 
 
                 <TextView
+                    android:id="@+id/tvpw2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
