--- a/app/src/main/res/layout/activity_lesson.xml
+++ b/app/src/main/res/layout/activity_lesson.xml
@@ -10,13 +10,31 @@
     <ListView
         android:id="@+id/listVIewLesson"
         android:layout_width="match_parent"
-        android:layout_height="443dp" >
+        android:layout_height="443dp"
+        android:layout_weight="0.9">
 
     </ListView>
 
+    <!--<Button-->
+        <!--android:id="@+id/buttonSelectDiff"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_weight="0.1"-->
+        <!--android:text="Start Quiz" />-->
+
+
     <Button
         android:id="@+id/buttonSelectDiff"
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Start Quiz" />
+        android:background="@drawable/buttonshape2"
+
+        android:shadowColor="#FFFFEE"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
+        android:text="Start Quiz"
+        android:textColor="#000000"
+        android:textSize="30sp" />
 </android.widget.LinearLayout>
