--- a/app/src/main/res/layout/activity_show_subs_cat.xml
+++ b/app/src/main/res/layout/activity_show_subs_cat.xml
@@ -9,5 +9,6 @@
     <ListView
         android:id="@+id/listViewSubs"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:background="#f7e6c3" />
 </android.widget.LinearLayout>
